# CloudTask

./: Cargo.toml  decodeqr.sh
src/: main.rs
src/app/: mod.rs  routes.rs
src/app/controllers/: mod.rs
src/app/modules/: base_task.rs  error.rs  image.rs  location.rs  mod.rs  text.rs  webpage.rs
