[package]
name = "CloudTask"
version = "0.1.0"
authors = ["Harbon <harbon@lydiabox.com>"]

[dependencies]
iron = "*"
rustc-serialize = "*"
image = "*"
persistent = "*"
serde = "*"
serde_json = "*"
[dependencies.bodyparser]

git = "https://github.com/iron/body-parser.git"

[dependencies.logger]

git = "https://github.com/iron/logger.git"
[dependencies.router]

git = "https://github.com/iron/router.git"
